# devops-masters-project

./: .gitignore  Containerfile.airflow  Containerfile.metaflow  Containerfile.metaflow-service  Containerfile.sagemaker  Containerfile.sagemaker-training  Makefile  README.md  captions.csv  pyproject.toml  requirements.airflow.txt
.github/workflows/: build.yaml
.metaflow/ExperimentFlow/: latest_run
.metaflow/ExperimentFlow/1696185096760863/_meta/: _self.json
.metaflow/ExperimentFlow/1696185229138318/_meta/: _self.json
.metaflow/ExperimentFlow/1696185449502746/_meta/: _self.json
.metaflow/ExperimentFlow/1696185716398471/_meta/: _self.json
.metaflow/ExperimentFlow/1696185972119154/_meta/: _self.json
.metaflow/ExperimentFlow/1696185999672813/_meta/: _self.json
.metaflow/ExperimentFlow/1696186264712559/_meta/: _self.json
.metaflow/ExperimentFlow/1696187341218557/_meta/: _self.json
.metaflow/ExperimentFlow/1696187347452750/_meta/: _self.json
.metaflow/ExperimentFlow/1696187851062565/_meta/: _self.json
.metaflow/ExperimentFlow/1696188018065967/_meta/: _self.json
.metaflow/ExperimentFlow/1696188312414523/_meta/: _self.json
.metaflow/ExperimentFlow/_meta/: _self.json
infra/: .terraform.lock.hcl  apache_airflow.tf  argo.tf  backend.tf  cluster.tf  common.tf  metaflow.tf  sagemaker.tf  vpc.tf
infra/values_templates/: airflow.yaml  argo.yaml
paper/: bibliography.bib  main.aux  main.lof  main.out  main.tex  main.toc
paper/setup/: packages.tex
pipelines/: core.py
src/: data_processor.py  down_size_images.py  instrumentation.py  run_loop.py  test_dag.py  test_flow.py
src/instrumentation/: core.py  system.py
src/pipelines/: instrumentation.py  utils.py
src/pipelines/metaflow/: flow.py
src/pipelines/workloads/: captioning.py
src/pipelines/workloads/captioning/: dag.py  flow.py  flow_batch.py  instrumentation.py  sagemaker.py  step_1.py  step_2.py  workload.py
src/pipelines/workloads/training/: dag.py  flow.py  flow_batch.py  sagemaker.py  step_1.py  step_2.py  workload.py
(+361 files in other folders)
