[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["Ben Stuart <ben@benstuart.ie>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
opentelemetry-api = "^1.20.0"
opentelemetry-sdk = "^1.20.0"
metaflow = "^2.9.15"
psutil = "^5.9.5"
py-cpuinfo = "^9.0.0"
transformers = "4.34.0"
pillow = "^10.1.0"
torch = "^2.1.0"
opentelemetry-exporter-otlp = "^1.20.0"
boto3 = "^1.28.68"
kubernetes = "^28.1.0"
fire = "^0.5.0"
pandas = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
