[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Ben Stuart <ben@benstuart.ie>"]

[tool.poetry.dependencies]
python = "3.10.*"
opentelemetry-api = "1.15.0"
opentelemetry-sdk = "1.15.0"
metaflow = "^2.9.15"
psutil = "5.9.5"
py-cpuinfo = "^9.0.0"
transformers = "4.34.0"
pillow = "^10.1.0"
torch = "2.1.0"
torchvision = "0.16.0"
opentelemetry-exporter-otlp = "1.15.0"
boto3 = "1.26.161"
boto = "2.49.0"
botocore = "1.29.161"
kubernetes = "23.6.0"
pandas = "1.5.3"
sagemaker = "^2.197.0"

[tool.poetry.group.test.dependencies]
scipy = "^1.11.3"
matplotlib = "^3.8.2"
fire = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
